--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,26 @@ code/*.png
 code/*.pkl
 code/*.csv
 **/__*
+*.aux
+*.glo
+*.idx
+*.log
+*.toc
+*.ist
+*.acn
+*.acr
+*.alg
+*.bbl
+*.blg
+*.dvi
+*.glg
+*.gls
+*.ilg
+*.ind
+*.lof
+*.lot
+*.maf
+*.mtc
+*.mtc1
+*.out
+*.synctex.gz
